--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -35,7 +35,30 @@
           <ul class="treeview-menu">
             <li class="active"><a href="/"><i class="fa fa-circle-o"></i>  خانه  </a></li>
             <li ><a href="/todayclasslist"><i class="fa fa-circle-o"></i> کلاس ها </a></li>
-            <li><a href="/admin"><i class="fa fa-circle-o"></i>  ثبت نام و ویرایش</a></li>
+
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-share"></i> <span>ثبت نام و ویرایش</span>
+            <span class="pull-left-container">
+              <i class="fa fa-angle-right pull-left"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/admin/home/attendancesheet/"><i class="fa fa-circle-o"></i>  لیستهای حضور و غیاب</a></li>
+            <li><a href="/admin/home/analysis/"><i class="fa fa-circle-o"></i> آنالیزها </a></li>
+            <li><a href="/admin/home/person/"><i class="fa fa-circle-o"></i> اشخاص </a></li>
+            <li><a href="/admin/home/insurance/"><i class="fa fa-circle-o"></i> بیمه ها </a></li>
+            <li><a href="/admin/home/sessiondate/"><i class="fa fa-circle-o"></i> جلسات </a></li>
+            <li><a href="/admin/home/absencedate/"><i class="fa fa-circle-o"></i> غیبتها </a></li>
+            <li><a href="/admin/home/validabsencedate/"><i class="fa fa-circle-o"></i> غیبتهای مجاز </a></li>
+            <li><a href="/admin/home/peyment/"><i class="fa fa-circle-o"></i> پرداختی ها </a></li>
+          </ul>
+        </li>
+
+
+
+
+
             <li><a href="/trainerslist"><i class="fa fa-circle-o"></i>  پنل مربیان   </a></li>
           </ul>
         </li>
