payment based on class and term added

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -96,14 +96,14 @@
           <!-- small box -->
           <div class="small-box bg-green">
             <div class="inner">
-              <h4>فروشگاه</h4>
+              <h4>حسابداری</h4>
 
               <p> -</p>
             </div>
             <div class="icon">
               <i class="fa fa-shopping-cart"></i>
             </div>
-            <a href="#" class="small-box-footer">اطلاعات بیشتر <i class="fa fa-arrow-circle-left"></i></a>
+            <a href="/accounting" class="small-box-footer">اطلاعات بیشتر <i class="fa fa-arrow-circle-left"></i></a>
           </div>
         </div>
         <!-- ./col -->
